[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles/Nivel1/Nivel1.gd" type="Script" id=1]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles/Nivel1/Imagenes/Nivel1_fondo.png" type="Texture" id=2]
[ext_resource path="res://Ejecutable/Juego/HUD/P1_contador_segundos/P1_contador_segundos.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ejecutable/Juego/Personajes/Personaje1/Personaje1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ejecutable/Juego/Escenarios/Niveles/Nivel1/Sonido/mu_nivel1.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 568.438, 18.4774 )

[node name="Nivel1" type="Node2D"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Fondo2" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -600 )

[node name="Conta_segundos" parent="." instance=ExtResource( 3 )]

[node name="HUD boton" type="Node2D" parent="."]
editor/display_folded = true

[node name="Derecha" type="TextureButton" parent="HUD boton"]
margin_left = 555.0
margin_top = -3.0
margin_right = 1030.0
margin_bottom = 604.0

[node name="Izquierda" type="TextureButton" parent="HUD boton"]
margin_right = 486.0
margin_bottom = 598.0

[node name="Personaje1" parent="." instance=ExtResource( 4 )]
position = Vector2( 540.284, 512.969 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Limite" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 475.993, 596.537 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limite"]
position = Vector2( 31.8126, -15.9278 )
shape = SubResource( 1 )

[node name="AudioMusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="HUD boton/Derecha" to="." method="_on_Derecha_pressed"]
[connection signal="pressed" from="HUD boton/Izquierda" to="." method="_on_Izquierda_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
